--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.3",
     "mongoose": "^8.18.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
