--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "mongoose": "^8.18.3"
   },
   "devDependencies": {
